--- a/Trabalho_Aprendizado_de_Máquina.ipynb
+++ b/Trabalho_Aprendizado_de_Máquina.ipynb
@@ -32,7 +32,7 @@
         "Componentes do grupo:\n",
         "- Gabriel Bauer de Oliveira - 00275614\n",
         "- Vitorugu da Silveira Fuerstenau Maciel - 007\n",
-        "- Fábio Petkowicz\n",
+        "- Fábio Petkowicz - \n",
         "\n",
         "Base de dados: https://www.kaggle.com/datasets/clmentbisaillon/fake-and-real-news-dataset?resource=download&select=True.csv\n",
         "\n",
@@ -44,15 +44,8 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "U9nmFaYUoLP3"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "YyFgNvf9OM0T",
         "colab": {
@@ -79,197 +72,84 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "from IPython.display import display\n",
         "\n",
         "true_news_dataframe = pd.read_csv(\"true_and_false/True.csv\")\n",
-        "false_news_dataframe = pd.read_csv(\"true_and_false/Fake.csv\")\n",
+        "fake_news_dataframe = pd.read_csv(\"true_and_false/Fake.csv\")\n",
         "\n",
-        "true_news_dataframe.head()\n",
-        "false_news_dataframe.head()"
+        "list(fake_news_dataframe.columns)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 337
+          "base_uri": "https://localhost:8080/"
         },
         "id": "v26_N9YN4GyM",
-        "outputId": "f1ccd76d-5750-4d76-dd21-bbfb4649210c"
+        "outputId": "927053fc-2479-4dcd-ffbd-3bbc24910a5f"
       },
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                                               title  \\\n",
-              "0   Donald Trump Sends Out Embarrassing New Year’...   \n",
-              "1   Drunk Bragging Trump Staffer Started Russian ...   \n",
-              "2   Sheriff David Clarke Becomes An Internet Joke...   \n",
-              "3   Trump Is So Obsessed He Even Has Obama’s Name...   \n",
-              "4   Pope Francis Just Called Out Donald Trump Dur...   \n",
-              "\n",
-              "                                                text subject  \\\n",
-              "0  Donald Trump just couldn t wish all Americans ...    News   \n",
-              "1  House Intelligence Committee Chairman Devin Nu...    News   \n",
-              "2  On Friday, it was revealed that former Milwauk...    News   \n",
-              "3  On Christmas day, Donald Trump announced that ...    News   \n",
-              "4  Pope Francis used his annual Christmas Day mes...    News   \n",
-              "\n",
-              "                date  \n",
-              "0  December 31, 2017  \n",
-              "1  December 31, 2017  \n",
-              "2  December 30, 2017  \n",
-              "3  December 29, 2017  \n",
-              "4  December 25, 2017  "
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-8eafdbeb-c5b7-4002-b8c6-6af6acdc29d2\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>title</th>\n",
-              "      <th>text</th>\n",
-              "      <th>subject</th>\n",
-              "      <th>date</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Donald Trump Sends Out Embarrassing New Year’...</td>\n",
-              "      <td>Donald Trump just couldn t wish all Americans ...</td>\n",
-              "      <td>News</td>\n",
-              "      <td>December 31, 2017</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Drunk Bragging Trump Staffer Started Russian ...</td>\n",
-              "      <td>House Intelligence Committee Chairman Devin Nu...</td>\n",
-              "      <td>News</td>\n",
-              "      <td>December 31, 2017</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Sheriff David Clarke Becomes An Internet Joke...</td>\n",
-              "      <td>On Friday, it was revealed that former Milwauk...</td>\n",
-              "      <td>News</td>\n",
-              "      <td>December 30, 2017</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Trump Is So Obsessed He Even Has Obama’s Name...</td>\n",
-              "      <td>On Christmas day, Donald Trump announced that ...</td>\n",
-              "      <td>News</td>\n",
-              "      <td>December 29, 2017</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Pope Francis Just Called Out Donald Trump Dur...</td>\n",
-              "      <td>Pope Francis used his annual Christmas Day mes...</td>\n",
-              "      <td>News</td>\n",
-              "      <td>December 25, 2017</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8eafdbeb-c5b7-4002-b8c6-6af6acdc29d2')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-8eafdbeb-c5b7-4002-b8c6-6af6acdc29d2 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8eafdbeb-c5b7-4002-b8c6-6af6acdc29d2');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "['title', 'text', 'subject', 'date']"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 45
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Verificação de colunas com campos vazios"
+      ],
+      "metadata": {
+        "id": "UcnswA3Z7l8w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colunas = ['title', 'text', 'subject', 'date']\n",
+        "dataframes = [true_news_dataframe, fake_news_dataframe]\n",
+        "\n",
+        "valido = 1\n",
+        "for dataframe in dataframes:\n",
+        "  for coluna in colunas:\n",
+        "   if (dataframe.loc[dataframe[coluna] == None].empty == False):\n",
+        "      valido = -1\n",
+        "      break\n",
+        "\n",
+        "print(\"Dataframes sem colunas vazias.\") if valido == 1 else print(\"Dataframe com colunas vazias.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j08OZfjR7kBi",
+        "outputId": "20b9bc54-f907-4563-992e-506aef724eb5"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataframes sem colunas vazias.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Realizar uma implementação própria da estratégia de k-fold cross validation, que seja genérica o suficiente para permitir o uso de diferentes valores de k (número de folds). A estratégia deve ser aplicada de forma estratificada, isto é, mantendo-se a proporção original de exemplos por classe em todos os folds, independente do número de classes do problema. É aconselhável que os grupos estudem as funções prontas a serem utilizadas para treinamento dos modelos, a fim de implementarem sua função para validação cruzada de forma compatível com as mesmas (principalmente em relação a estruturas de dados)."
+      ],
+      "metadata": {
+        "id": "6wuFORCFEJRW"
+      }
     }
   ]
 }
