Funcao create_kfolds

--- a/Trabalho_Aprendizado_de_Máquina.ipynb
+++ b/Trabalho_Aprendizado_de_Máquina.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "Componentes do grupo:\n",
         "- Gabriel Bauer de Oliveira - 00275614\n",
-        "- Vitorugu da Silveira Fuerstenau Maciel - 007\n",
+        "- Vitorugu da Silveira Fuerstenau Maciel - 00275605\n",
         "- Fábio Petkowicz - \n",
         "\n",
         "Base de dados: https://www.kaggle.com/datasets/clmentbisaillon/fake-and-real-news-dataset?resource=download&select=True.csv\n",
@@ -45,58 +45,244 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#Imports\n",
+        "import pandas as pd\n",
+        "from IPython.display import display\n",
+        "from typing import List\n",
+        "from typing import Tuple"
+      ],
+      "metadata": {
+        "id": "o5N0W-FO5ktE"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {
         "id": "YyFgNvf9OM0T",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f728a030-5546-4638-8e8e-33d2f63e44a6"
+        "outputId": "850c2549-ab7c-4b8c-c178-3fb60d8df983"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Archive:  /content/archive.zip\n",
-            "replace /content/true_and_false/Fake.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n",
-            "/content\n"
+            "Archive:  sample_data/archive.zip\n",
+            "  inflating: sample_data/Fake.csv    \n",
+            "  inflating: sample_data/True.csv    \n"
           ]
         }
       ],
       "source": [
-        "!unzip \"/content/archive.zip\" -d \"/content/true_and_false\""
+        "!unzip \"sample_data/archive.zip\" -d \"sample_data/\""
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "from IPython.display import display\n",
+        "true_news_dataframe = pd.read_csv(\"sample_data/True.csv\")\n",
+        "fake_news_dataframe = pd.read_csv(\"sample_data/Fake.csv\")\n",
         "\n",
-        "true_news_dataframe = pd.read_csv(\"true_and_false/True.csv\")\n",
-        "fake_news_dataframe = pd.read_csv(\"true_and_false/Fake.csv\")\n",
+        "true_news_dataframe['true'] = 1\n",
+        "fake_news_dataframe['true'] = 0\n",
         "\n",
-        "list(fake_news_dataframe.columns)"
+        "news_dataframe = pd.concat([true_news_dataframe, fake_news_dataframe])\n",
+        "news_dataframe.head()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 206
         },
         "id": "v26_N9YN4GyM",
-        "outputId": "927053fc-2479-4dcd-ffbd-3bbc24910a5f"
+        "outputId": "a1e5e03f-af86-4a8e-d29d-4d5778f5ea0b"
       },
-      "execution_count": 45,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['title', 'text', 'subject', 'date']"
+              "                                               title  \\\n",
+              "0  As U.S. budget fight looms, Republicans flip t...   \n",
+              "1  U.S. military to accept transgender recruits o...   \n",
+              "2  Senior U.S. Republican senator: 'Let Mr. Muell...   \n",
+              "3  FBI Russia probe helped by Australian diplomat...   \n",
+              "4  Trump wants Postal Service to charge 'much mor...   \n",
+              "\n",
+              "                                                text       subject  \\\n",
+              "0  WASHINGTON (Reuters) - The head of a conservat...  politicsNews   \n",
+              "1  WASHINGTON (Reuters) - Transgender people will...  politicsNews   \n",
+              "2  WASHINGTON (Reuters) - The special counsel inv...  politicsNews   \n",
+              "3  WASHINGTON (Reuters) - Trump campaign adviser ...  politicsNews   \n",
+              "4  SEATTLE/WASHINGTON (Reuters) - President Donal...  politicsNews   \n",
+              "\n",
+              "                 date  true  \n",
+              "0  December 31, 2017      1  \n",
+              "1  December 29, 2017      1  \n",
+              "2  December 31, 2017      1  \n",
+              "3  December 30, 2017      1  \n",
+              "4  December 29, 2017      1  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-44091528-2312-4d70-a375-02c736b62f8b\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "      <th>text</th>\n",
+              "      <th>subject</th>\n",
+              "      <th>date</th>\n",
+              "      <th>true</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>As U.S. budget fight looms, Republicans flip t...</td>\n",
+              "      <td>WASHINGTON (Reuters) - The head of a conservat...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>U.S. military to accept transgender recruits o...</td>\n",
+              "      <td>WASHINGTON (Reuters) - Transgender people will...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 29, 2017</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Senior U.S. Republican senator: 'Let Mr. Muell...</td>\n",
+              "      <td>WASHINGTON (Reuters) - The special counsel inv...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>FBI Russia probe helped by Australian diplomat...</td>\n",
+              "      <td>WASHINGTON (Reuters) - Trump campaign adviser ...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 30, 2017</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Trump wants Postal Service to charge 'much mor...</td>\n",
+              "      <td>SEATTLE/WASHINGTON (Reuters) - President Donal...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 29, 2017</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44091528-2312-4d70-a375-02c736b62f8b')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-44091528-2312-4d70-a375-02c736b62f8b button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-44091528-2312-4d70-a375-02c736b62f8b');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 26
         }
       ]
     },
@@ -112,8 +298,8 @@
     {
       "cell_type": "code",
       "source": [
-        "colunas = ['title', 'text', 'subject', 'date']\n",
-        "dataframes = [true_news_dataframe, fake_news_dataframe]\n",
+        "colunas = ['title', 'text', 'subject', 'date', 'true']\n",
+        "dataframes = [news_dataframe]\n",
         "\n",
         "valido = 1\n",
         "for dataframe in dataframes:\n",
@@ -129,9 +315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j08OZfjR7kBi",
-        "outputId": "20b9bc54-f907-4563-992e-506aef724eb5"
+        "outputId": "5eac1e13-ee2f-4e0e-938f-3fed9a7ef7ad"
       },
-      "execution_count": 67,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,6 +336,44 @@
       "metadata": {
         "id": "6wuFORCFEJRW"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#KFOLDS\n",
+        "\"\"\"\n",
+        "@parameters\n",
+        "k: numero de folds\n",
+        "dataframe: dataframe com os dados\n",
+        "@return\n",
+        "[pd.DataFrame]: lista de \n",
+        "\"\"\"\n",
+        "def create_kfolds(k = int, dataframe = pd.DataFrame) -> List[Tuple[int, int]]:\n",
+        "  true_news_dataframe = dataframe.loc[dataframe['true'] == 1]\n",
+        "  fake_news_dataframe = dataframe.loc[dataframe['true'] == 0]\n",
+        "  \n",
+        "  true_news_size = true_news_dataframe.shape[0]\n",
+        "  fake_news_size = fake_news_dataframe.shape[0]\n",
+        "\n",
+        "create_kfolds(2, news_dataframe)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mGy8qJ0p3mSW",
+        "outputId": "60ae8794-f854-4154-84a0-cad75adbbb02"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "21417\n"
+          ]
+        }
+      ]
     }
   ]
 }
