Funcao create_kfolds finalizada e celula pra obter o dataset

--- a/Trabalho_Aprendizado_de_Máquina.ipynb
+++ b/Trabalho_Aprendizado_de_Máquina.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "Componentes do grupo:\n",
         "- Gabriel Bauer de Oliveira - 00275614\n",
-        "- Vitorugu da Silveira Fuerstenau Maciel - 00275605\n",
+        "- Vitor Hugo da Silveira Fuerstenau Maciel - 00275605\n",
         "- Fábio Petkowicz - \n",
         "\n",
         "Base de dados: https://www.kaggle.com/datasets/clmentbisaillon/fake-and-real-news-dataset?resource=download&select=True.csv\n",
@@ -50,38 +50,72 @@
         "import pandas as pd\n",
         "from IPython.display import display\n",
         "from typing import List\n",
-        "from typing import Tuple"
+        "from typing import Tuple\n",
+        "import random as random"
       ],
       "metadata": {
         "id": "o5N0W-FO5ktE"
       },
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "id": "YyFgNvf9OM0T",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "850c2549-ab7c-4b8c-c178-3fb60d8df983"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Archive:  sample_data/archive.zip\n",
-            "  inflating: sample_data/Fake.csv    \n",
-            "  inflating: sample_data/True.csv    \n"
-          ]
-        }
-      ],
       "source": [
-        "!unzip \"sample_data/archive.zip\" -d \"sample_data/\""
-      ]
+        "#@title Gather dataset.zip\n",
+        "file_id = \"1LBu6G9C4E5qODJpFuLeRdi6VKrIHaLLJ\" \n",
+        "!pip install -U -q PyDrive\n",
+        "\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)\n",
+        "\n",
+        "# PyDrive reference:\n",
+        "# https://googledrive.github.io/PyDrive/docs/build/html/index.html\n",
+        "\n",
+        "\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "\n",
+        "from googleapiclient.discovery import build\n",
+        "drive_service = build('drive', 'v3')\n",
+        "\n",
+        "# Replace the assignment below with your file ID\n",
+        "# to download a different file.\n",
+        "#\n",
+        "# A file ID looks like: 1gLBqEWEBQDYbKCDigHnUXNTkzl-OslSO\n",
+        "\n",
+        "import io\n",
+        "from googleapiclient.http import MediaIoBaseDownload\n",
+        "\n",
+        "request = drive_service.files().get_media(fileId=file_id)\n",
+        "downloaded = io.BytesIO()\n",
+        "downloader = MediaIoBaseDownload(downloaded, request)\n",
+        "done = False\n",
+        "while done is False:\n",
+        "  # _ is a placeholder for a progress object that we ignore.\n",
+        "  # (Our file is small, so we skip reporting progress.)\n",
+        "  _, done = downloader.next_chunk()\n",
+        "\n",
+        "fileId = drive.CreateFile({'id': file_id }) #DRIVE_FILE_ID is file id example: 1iytA1n2z4go3uVCwE_vIKouTKyIDjEq\n",
+        "print(fileId['title'])  \n",
+        "fileId.GetContentFile(fileId['title'])  # Save Drive file as a local file\n",
+        "\n",
+        "!unzip {fileId['title']} -d \"sample_data/\""
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "KprEMZKLa1UW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -346,34 +380,101 @@
         "k: numero de folds\n",
         "dataframe: dataframe com os dados\n",
         "@return\n",
-        "[pd.DataFrame]: lista de \n",
+        "[pd.DataFrame]: lista dos folds de noticias verdadeiras e falsas\n",
         "\"\"\"\n",
-        "def create_kfolds(k = int, dataframe = pd.DataFrame) -> List[Tuple[int, int]]:\n",
+        "def create_kfolds(k = int, dataframe = pd.DataFrame) -> List[List[pd.DataFrame]]:\n",
         "  true_news_dataframe = dataframe.loc[dataframe['true'] == 1]\n",
         "  fake_news_dataframe = dataframe.loc[dataframe['true'] == 0]\n",
         "  \n",
         "  true_news_size = true_news_dataframe.shape[0]\n",
         "  fake_news_size = fake_news_dataframe.shape[0]\n",
         "\n",
-        "create_kfolds(2, news_dataframe)"
+        "  random.seed()\n",
+        "\n",
+        "#generating true news folds\n",
+        "  true_news_folds = []\n",
+        "\n",
+        "  first_index_true = random.randrange(0, true_news_size)\n",
+        "  fold_size = true_news_size//k\n",
+        "\n",
+        "  current_index = first_index_true\n",
+        "  for _ in range (0, k):\n",
+        "    if(current_index + fold_size >= true_news_size):\n",
+        "      offset = true_news_size - current_index\n",
+        "\n",
+        "      #quantas instancias do fold se encontram até o final do dataframe\n",
+        "      #devem ser alocadas fold_size - offset instancias no inicio do dataframe\n",
+        "      \n",
+        "      fold_start_index = current_index\n",
+        "      fold_end_index = true_news_size\n",
+        "      fold_end = pd.DataFrame(true_news_dataframe[fold_start_index:fold_end_index])\n",
+        "\n",
+        "      fold_start_index = 0\n",
+        "      fold_end_index = fold_size - offset\n",
+        "      fold_start = pd.DataFrame(true_news_dataframe[fold_start_index:fold_end_index])\n",
+        "      \n",
+        "      fold = pd.concat([fold_end, fold_start])\n",
+        "\n",
+        "      true_news_folds.append(fold)\n",
+        "\n",
+        "      current_index = fold_size - offset\n",
+        "\n",
+        "    else:\n",
+        "      fold_start_index = current_index\n",
+        "      fold_end_index = current_index + fold_size\n",
+        "      fold = pd.DataFrame(true_news_dataframe[fold_start_index:fold_end_index])\n",
+        "\n",
+        "      true_news_folds.append(fold)\n",
+        "\n",
+        "      current_index = current_index + fold_size\n",
+        "\n",
+        "#generating fake news folds\n",
+        "  fake_news_folds = []\n",
+        "\n",
+        "  first_index_fake = random.randrange(0, fake_news_size)\n",
+        "  fold_size = fake_news_size//k\n",
+        "\n",
+        "  current_index = first_index_fake\n",
+        "  for _ in range (0, k):\n",
+        "    if(current_index + fold_size >= fake_news_size):\n",
+        "      offset = fake_news_size - current_index\n",
+        "\n",
+        "      #quantas instancias do fold se encontram até o final do dataframe\n",
+        "      #devem ser alocadas fold_size - offset instancias no inicio do dataframe\n",
+        "      \n",
+        "      fold_start_index = current_index\n",
+        "      fold_end_index = fake_news_size\n",
+        "      fold_end = pd.DataFrame(fake_news_dataframe[fold_start_index:fold_end_index])\n",
+        "\n",
+        "      fold_start_index = 0\n",
+        "      fold_end_index = fold_size - offset\n",
+        "      fold_start = pd.DataFrame(fake_news_dataframe[fold_start_index:fold_end_index])\n",
+        "      \n",
+        "      fold = pd.concat([fold_end, fold_start])\n",
+        "\n",
+        "      fake_news_folds.append(fold)\n",
+        "\n",
+        "      current_index = fold_size - offset\n",
+        "\n",
+        "    else:\n",
+        "      fold_start_index = current_index\n",
+        "      fold_end_index = current_index + fold_size\n",
+        "      fold = pd.DataFrame(fake_news_dataframe[fold_start_index:fold_end_index])\n",
+        "\n",
+        "      fake_news_folds.append(fold)\n",
+        "      current_index = current_index + fold_size\n",
+        "\n",
+        "  return [pd.concat([true_df, fake_df]) for true_df, fake_df in zip(true_news_folds, fake_news_folds)]\n",
+        "\n",
+        "fold_list = create_kfolds(10, news_dataframe)\n",
+        "for fold in fold_list:\n",
+        "  display(fold)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mGy8qJ0p3mSW",
-        "outputId": "60ae8794-f854-4154-84a0-cad75adbbb02"
+        "id": "mGy8qJ0p3mSW"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "21417\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
